--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
   "author": "ari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5"
   }
 }
